# robot-brain

./: .gitignore
robot_brain/: package.xml  setup.py
robot_brain/config/: brain_params.yaml
robot_brain/launch/: brain.launch.py
robot_brain/robot_brain/: brain_node.py  cli_interface.py  motion_executor.py  prompts.py
robot_bringup/: package.xml
robot_bringup/config/: demo.rviz  nav2_params.yaml  nvblox_params.yaml  zed_override.yaml
robot_bringup/launch/: cuvslam_zed.launch.py  demo.launch.py  full_nvidia_robot.launch.py  manipulation.launch.py
robot_bringup/scripts/: robot-can.service  setup_can.sh  stop_can.sh
robot_bringup/urdf/: robot.urdf
robot_hardware/: CMakeLists.txt  package.xml  robot_hardware_plugin.xml
robot_hardware/include/robot_hardware/: robstride_hardware_interface.hpp
robot_hardware/src/: robstride_hardware_interface.cpp
robot_moveit_config/: CMakeLists.txt  package.xml
robot_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  planning_pipeline.yaml  robot.srdf  ros2_controllers.yaml
robot_moveit_config/launch/: move_group.launch.py
robot_safety/: CMakeLists.txt  package.xml
robot_safety/config/: safety_params.yaml
robot_safety/launch/: safety.launch.py
robot_safety/src/: safety_node.cpp
