<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_brain</name>
  <version>0.1.0</version>
  <description>Vision + LLM task planner using ZED camera and Ollama LLaVA</description>
  <maintainer email="epadmin@robot.local">epadmin</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>zed_wrapper</exec_depend>

  <test_depend>ament_python</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
