<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_safety</name>
  <version>0.1.0</version>
  <description>Robot safety: e-stop, velocity limits, human proximity detection</description>
  <maintainer email="admin@robot.local">epadmin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>diagnostic_updater</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
